# aoc2024-py

./: README.md  aoc01.py  aoc02.py  aoc03.py  aoc04.py  aoc05.py  aoc07.py  aoc08.py  aoc09.py  aoc10.py  pyproject.toml
tests/: test_aoc01.py  test_aoc02.py  test_aoc03.py  test_aoc05.py  test_aoc07.py  test_aoc08.py  test_aoc09.py  test_aoc10.py
