[project]
name = "aoc2024-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "requests-mock>=1.12.1",
    "ruff>=0.8.6",
]

[tool.ruff]
lint.select = ["E", "F", "W"]
lint.ignore = ["E501", "E712"]
